syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service SecurityLoginsLogService{
	rpc GetSecurityLoginsLog(SecurityLoginsLogIdRequest) returns (SecurityLoginsLog);
	rpc CreateSecurityLoginsLog(SecurityLoginsLogs) returns (google.protobuf.Empty);
	rpc UpdateSecurityLoginsLog(SecurityLoginsLogs) returns (google.protobuf.Empty);
	rpc DeleteSecurityLoginsLog(SecurityLoginsLogs) returns (google.protobuf.Empty);
 }
	message SecurityLoginsLogIdRequest{
		string Id = 1;
	}

	message SecurityLoginsLog{
		string Id =1;
        string Login =2;
        string SourceIP =3;
		google.protobuf.Timestamp LogonDate =4;
        bool IsSuccesful =5;
	}

	message SecurityLoginsLogs{
		repeated SecurityLoginsLog securityLog = 1;
	}

